--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title>Redirection</title>
 
-<meta http-equiv="refresh" content="1; URL=https://4zm2452k7m8gn5ix.000webhostapp.com/">
+<meta http-equiv="refresh" content="0; URL=https://la-noix-savante.alwaysdata.net/newstory/">
 </head>
 
 <body>
